@@ -258,6 +258,13 @@
   :float right
   :margin 7px 5px 0px 0px
 
+.confirm
+  :background #cdfecd
+  :border-left 10px palegreen solid
+  :font-size 11px
+  :margin 0px 0px 6px 0px
+  :padding 6px
+
 // Single-row lists.
 //------------------------------------------------------------------------------
 .log
