@@ -1,0 +1,6 @@
+id = dom_id(@user, :confirm)
+page << "if ($('#{id}')) {"
+  page.call "crm.flick", id, :remove
+page << "} else {"
+  page.insert_html :top, dom_id(@user), :partial => "confirm"
+page << "}"
